[gd_scene load_steps=2 format=3 uid="uid://dfchf2ldpehh"]

[ext_resource type="Script" uid="uid://dt5htqeoblwpv" path="res://Scripts/Inventory/InventoryUI.gd" id="1_uvo7v"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvo7v")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -330.0
offset_top = 20.0
offset_right = 330.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleBar" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "INVENTORY"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/TitleBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 0
text = "X"

[node name="StatsContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="WeightLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Weight: 0 / 100 kg (0%)"

[node name="SlotsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Slots: 0 / 20"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 350)
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5
